# goit-algo2-hw-07

./: README.md  pyproject.toml
app/: scenario_handler.py  task1.py  task2.py  tree.py
tests/: tests.py
