[tool.poetry]
name = "goit-algo2-hw-07"
version = "0.1.0"
description = ""
authors = ["Sergii <kryvkosergii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
rich = "^13.9.4"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
